Switch installer to Crazy Craft 4.0